fix login on mobile

--- a/client/app/bundles/Meetings/components/Header.scss
+++ b/client/app/bundles/Meetings/components/Header.scss
@@ -22,7 +22,7 @@
 }
 
 .right {
-  display: none;
+  display: flex;
   align-items: center;
   margin-left: auto;
 
